<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:paddingVertical="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/variables_hint"
            android:textColor="?attr/text_second_color" />

        <LinearLayout
            android:id="@+id/variablesList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/variableName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/variable_name_hint"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="?attr/text_color" />

            <EditText
                android:id="@+id/variableValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/variable_value_hint"
                android:importantForAutofill="no"
                android:inputType="numberDecimal|numberSigned"
                android:maxLines="1"
                android:textColor="?attr/text_color" />

            <Button
                android:id="@+id/variableAddButton"
                style="?attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/variables_add"
                android:textColor="?attr/text_color" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
